# kontiki_tutorial

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: global_definition.cmake
config/: config.yaml  vis_config.yaml
data/: imu_data_res_kitti.txt  imu_data_res_tum.txt
include/kontiki_tutorial/: data_types.hpp  global_definition.h.in  kontiki_imu_test.hpp  plot_kitti_traj.hpp  trajectory_manager.hpp
src/: main.cpp  plotKittiTrajectory.cpp
